<resources>
    <string name="app_name">Financ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_passivo">Adicionar passivo</string>
    <string name="add_ativo">Adicionar ativo</string>
    <string name="saldo_atual">Saldo atual</string>
    <string name="saldo">R$ 00,000.00</string>
    <string name="text_name">Olá Person, seja bem vindo!</string>
</resources>