<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.BalanceFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="258dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_add"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="64dp"
        android:alpha="0.15"
        android:background="@drawable/rectangle_2"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/rectangle_remove" />

    <View
        android:id="@+id/rectangle_remove"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="64dp"
        android:alpha="0.15"
        android:background="@drawable/rectangle_2"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/saldo_atual"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_add"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_add"
        app:layout_constraintStart_toStartOf="@+id/rectangle_add"
        app:layout_constraintTop_toTopOf="@+id/rectangle_add"
        android:contentDescription="@string/add_ativo" />

    <ImageView
        android:id="@+id/imageRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_passivo"
        android:src="@drawable/ic_remove"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_remove"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_remove"
        app:layout_constraintStart_toStartOf="@+id/rectangle_remove"
        app:layout_constraintTop_toTopOf="@+id/rectangle_remove" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F3F3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@drawable/rectangle_2"
            android:padding="12dp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>